--- a/crm1/accounts/templates/accounts/status.html
+++ b/crm1/accounts/templates/accounts/status.html
@@ -7,8 +7,10 @@
       <div class="card-header">
        <h5 class="card-title">Total Orders</h5>
       </div>
-      <div class="card-body">
-        <h3 class="card-title"></h3>
+      <div class="card-body"> <!--A card in Bootstrap 4 is a bordered box with some padding around its content. It includes options for headers, footers, content, colors, etc.-->
+
+
+        <h3 class="card-title">{{total_orders}}</h3>
       </div>
    </div>
   </div>
@@ -21,7 +23,7 @@
        <h5 class="card-title">Orders Delivered</h5>
       </div>
       <div class="card-body">
-        <h3 class="card-title"></h3>
+        <h3 class="card-title">{{delivered}}</h3>
       </div>
    </div>
   </div>
@@ -34,7 +36,7 @@
        <h5 class="card-title">Orders Pending</h5>
       </div>
       <div class="card-body">
-        <h3 class="card-title"></h3>
+        <h3 class="card-title">{{pending}}</h3>
       </div>
    </div>
   </div>
