--- a/crm1/accounts/templates/accounts/dashboard.html
+++ b/crm1/accounts/templates/accounts/dashboard.html
@@ -1,6 +1,8 @@
-{% extends 'accounts/main.html' %}
+{%  extends 'accounts/main.html' %}
+
 {% block content %}
-{% include 'accounts/status.html' %}
+
+{%  include 'accounts/status.html' %}
 
 <br>
 
@@ -14,15 +16,16 @@
 				<tr>
 					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
 
-					{% for customer in customers %}
-						<tr>
-								<td>{{customer.name}}</td>
-								<td>{{customer.phone}}</td>
-						</tr>
-					{% endfor %}
+				{% for customer in customers %}
+					<tr>
+						<td><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></td>
+						<td>{{customer.name}}</td>
+						<td>{{customer.phone}}</td>
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
@@ -32,7 +35,7 @@
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+		
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
@@ -42,9 +45,22 @@
 					<th>Remove</th>
 				</tr>
 
+				{% for order in orders %}
+					<tr>
+						<td>{{order.product}}</td>
+						<td>{{order.date_created}}</td>
+						<td>{{order.status}}</td>
+						<td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id%}">Update</a></td>
+						<td><a class="btn btn-sm btn-danger"href="{% url 'delete_order' order.id%}">Delete</a></td>
+
+					</tr>
+				{% endfor %}
+
+
 			</table>
 		</div>
 	</div>
 
 </div>
-{%  endblock %}
+
+{% endblock %}
