--- a/crm1/accounts/templates/accounts/main.html
+++ b/crm1/accounts/templates/accounts/main.html
@@ -5,8 +5,7 @@
 <html>
 <head>
      <title> CRM </title>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
      <!-- this means in static folder look for css and look for main.css & this should now include our css into oour template even though we dont have that in here its now linking out to that static file folder -->
 
