--- a/crm1/accounts/templates/accounts/customer.html
+++ b/crm1/accounts/templates/accounts/customer.html
@@ -44,6 +44,7 @@
 
 		    <button class="btn btn-primary" type="submit">Search</button>
 		  </form>
+
 		</div>
 	</div>
 
@@ -56,7 +57,7 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
-					<th>Category</th>
+					<th>Note</th>
 					<th>Date Orderd</th>
 					<th>Status</th>
 					<th>Update</th>
@@ -67,11 +68,12 @@
 
 				<tr>
 					<td>{{order.product}}</td>
-					<td>{{order.product.category}}</td>
+					<td>{{order.note}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
-					<td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id%}">Update</a></td>
-					<td><a class="btn btn-sm btn-danger"href="{% url 'delete_order' order.id%}">Delete</a></td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+
+					<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
 				</tr>
 				{% endfor %}
 
